# Ledgit

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
.github/workflows/: build.yml  ci.yml
examples/: README.md  setup.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: file_commands.rs  git_commands.rs  mod.rs  repo_commands.rs
src-tauri/src/models/: error.rs  git.rs  mod.rs  sheet.rs
src-tauri/src/services/: file_service.rs  git_service.rs  mod.rs
src-tauri/src/utils/: commit_message.rs
src/components/DiffViewer/: DiffLegend.tsx  DiffViewer.tsx  RedlineGrid.tsx
src/components/FileExplorer/: FileExplorer.tsx
src/components/MergeResolver/: ConflictCell.tsx  MergeResolver.tsx
src/components/SpreadsheetEditor/: SpreadsheetEditor.tsx  cellRenderers.tsx  contextMenu.ts  useGridConfig.test.ts  useGridConfig.ts
src/components/TitleBar/: TitleBar.tsx
src/components/VersionSidebar/: BranchSelector.tsx  CommitList.tsx  CommitPanel.tsx  VersionSidebar.tsx
src/components/WelcomeScreen/: WelcomeScreen.tsx
src/components/common/: Button.tsx  Modal.tsx  Toast.tsx
src/hooks/: useAutoSave.ts  useDiffHighlighting.ts  useFileWatcher.ts  useKeyboardShortcuts.ts
src/ipc/: fileIpc.ts  gitIpc.ts  repoIpc.ts
src/services/: diffService.ts
src/stores/: useDiffStore.ts  useGitStore.test.ts  useGitStore.ts  useRepoStore.ts  useSheetStore.test.ts  useSheetStore.ts
src/types/: daff.d.ts  diff.ts  git.ts  sheet.ts
src/utils/: csvHelpers.ts  formatters.ts
