[package]
name = "ledgit"
version = "0.1.0"
description = "A lightweight CSV editor with built-in git version control"
authors = []
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
csv = "1.3"
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
